# minutes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md
alembic/: env.py
alembic/versions/: 20260311_0001_init_jobs.py  20260312_0002_add_job_indexes.py
docker/: gateway.Dockerfile  inference-worker.Dockerfile  orchestrator.Dockerfile
docs/: celery-migration.md  claude-handoff.md  code-review-2026-03-12.md  local-testing.md  performance-stability-audit-2026-03-14.md
docs/plans/: 2026-03-11-minutes-backend-implementation.md
scripts/: check_env.py  download_models.py  local_run_job.py  run-gateway.sh  run-inference-worker.sh  run-orchestrator.sh  smoke_audio.sh
src/minutes_core/: __init__.py  config.py  constants.py  db.py  events.py  export.py  logging.py  media.py  models.py  profiles.py  queue.py  repositories.py  schemas.py  storage.py
src/minutes_gateway/: app.py  dependencies.py
src/minutes_inference/: actors.py  model_pool.py  service.py
src/minutes_orchestrator/: actors.py  services.py
tests/: conftest.py  helpers.py  test_packaging.py  test_scripts.py
tests/core/: conftest.py  test_config.py  test_db.py  test_events.py  test_export.py  test_logging.py  test_media.py  test_queue.py  test_repository.py  test_repository_tx.py  test_storage.py
tests/gateway/: conftest.py  test_app.py  test_auth.py  test_dependencies.py  test_export_golden.py  test_helpers.py  test_jobs_api.py  test_openai_api.py  test_openai_formats.py  test_sse_async.py  (+1 more)
(+23 files in other folders)
